# gtest-demo

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  mainapp.c  output.xml
modules/: CMakeLists.txt  calculations.c  calculations.h
tests/: CMakeLists.txt  test_calculations.cpp
